--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
         <dependency>
             <groupId>com.github.Burchard36</groupId>
             <artifactId>BurchAPI</artifactId>
-            <version>01-AA-04</version>
+            <version>01-AB-02</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
